# speech-recognition-inference

./: .dockerignore  .gitignore  Dockerfile  README.md  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml  pub.yml
examples/: batch_processing.py  run_ffmpeg.py  run_whisper_api.py  run_whisper_api_twoinputs.py
src/: batch_processing.py  batch_processing_2.py  cli.py  config.py  draft.py  hf.py  parsing.py
src/api/: __init__.py  cli.py  config.py  main.py  models.py  parser.py  pipeline.py
src/api/routers/: download_model.py  load_model.py  load_model_hf.py  run_whisper.py  run_whisper_hf.py  run_whisper_hf_implement.py
src/batch_processing/: __init__.py  batch_size.py  chunking.py  main.py  parsing.py  pipeline.py  sample_run.py  sample_run.slurm
src/data_types/inputs/: transcription.py
src/data_types/outputs/: transcription.py
src/pipeline/: main.py
src/run_api/: run_whisper_api.py  run_whisper_api_twoinputs.py
src/speech_recognition_inference/: cli.py
src/speech_recognition_inference/api/: Dockerfile  main.py
src/speech_recognition_inference/pipeline/: Dockerfile  __init__.py  main.py
tests/: test_batch_processing.py  test_parse_string_to_result.py  test_pipeline.py
