[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[project]
name = "speech-recognition-inference"
version = "0.1.0"
authors = [
  { name="Junying (Alice) Fang", email="jf3375@princeton.edu" },
]
description = "A Speech-to-Text API."
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "fastapi",
  "pydantic",
  "uvicorn",
  "transformers",
  "torch",
  "numpy < 2",
  "huggingface_hub",
  "accelerate",
]

[project.scripts]
speech_recognition_launcher = "api.cli:launch"

[project.optional-dependencies]
docs = [
    "myst_parser",
    "sphinx",
    "sphinx-rtd-theme"
]

[project.urls]
"Homepage" = "https://github.com/princeton-ddss/speech-recognition-inference"

