[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[project]
name = "speech-recognition-inference"
version = "0.1.0"
description = "A Speech-to-Text API."
readme = "README.md"
license = "MIT"
authors = [
  { name="Junying (Alice) Fang", email="jf3375@princeton.edu" },
]
requires-python = ">=3.7"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "accelerate",
  "fastapi",
  "huggingface_hub",
  "nox",
  "numpy<2",
  "pre-commit",
  "pydantic",
  "torch>=2.6.0",
  "transformers",
  "uvicorn",
  "slowapi",
  "python-dotenv"
]
[project.optional-dependencies]
docs = [
  "myst_parser",
  "sphinx",
  "sphinx-rtd-theme",
]
[project.urls]
"Homepage" = "https://github.com/princeton-ddss/speech-recognition-inference"
[project.scripts]
speech_recognition_launcher = "api.cli:launch"
