[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[tool.hatch.build.targets.wheel]
packages = ["src/speech_recognition_inference"]

[project]
name = "speech-recognition-inference"
version = "0.1.0"
description = "A Speech-to-Text API."
readme = "README.md"
license = "MIT"
authors = [
  { name="Junying (Alice) Fang", email="jf3375@princeton.edu" },
]
requires-python = ">=3.9"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "accelerate",
  "datasets>=3.3.2",
  "deprecated>=1.2.18",
  "dotenv>=0.9.9",
  "fastapi",
  "ffmpeg>=1.4",
  "huggingface_hub",
  "librosa>=0.11",
  "nox",
  "numpy<2",
  "pre-commit",
  "pydantic",
  "pydub>=0.25.1",
  "python-dotenv",
  "slowapi",
  "soundfile>0.12.0",
  "torch>=2.6",
  "transformers",
  "typer>=0.15.2",
  "uvicorn",
]
[project.optional-dependencies]
docs = [
  "myst_parser",
  "sphinx",
  "sphinx-rtd-theme",
]
[project.urls]
"Homepage" = "https://github.com/princeton-ddss/speech-recognition-inference"
[project.scripts]
speech_recognition = "speech_recognition_inference.cli:app"

[dependency-groups]
dev = [
    "ipython>=8.18.1",
]
